--- a/HTML & CSS Mini Course/Introduction to CSS/demo/demo/style.css
+++ b/HTML & CSS Mini Course/Introduction to CSS/demo/demo/style.css
@@ -13,3 +13,9 @@ input[type="submit"] {
     border-radius: 1;
     cursor: pointer;
 }
+
+input[type="submit"]:hover{
+    color: darkgray;
+    background: white;
+    border: 1px solid darkgray;
+}
