--- a/JS Advanced/10.Exercise: DOM Introduction/A06/template.css
+++ b/JS Advanced/10.Exercise: DOM Introduction/A06/template.css
@@ -1,81 +1,163 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+/*
+	Side Navigation Menu V2, RWD
+	===================
+	License:
+	https://goo.gl/EaUPrt
+	===================
+	Author: @PableraShow
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+ */
+
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    line-height: 1.42em;
+    color: #A7A1AE;
+    background-color: #1F2739;
 }
 
-html {
-    font-family: "Lato", sans-serif;
-    font-size: 24px;
-    color: #234465;
-}
-body{
-    background-image: url('./softuni-wallpaper-5-1920x1080.jpg');
-}
-
-h4 {
-    width: 70%;
-    margin: 1% auto;
-    padding: 11px;
+h1 {
+    font-size: 3em;
+    font-weight: 300;
+    line-height: 1em;
     text-align: center;
-    color: white;
+    color: #4DC3FA;
 }
 
-#exercise {
-    width: 78%;
-    margin: 3% auto;
-    padding: 1rem;
-    border: 1px solid lightgrey;
+h2 {
+    font-size: 1em;
+    font-weight: 300;
     text-align: center;
-    background: radial-gradient(rgb(39, 38, 38), transparent);
-    box-shadow: 0px 5px 11px 2px white;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    display: block;
+    line-height: 1em;
+    padding-bottom: 2em;
+    color: #FB667A;
 }
 
-input[type="button"], button {
-    padding: 0.3rem 0.5rem;
-    font-size: 1.1em;
-    min-width: 10%;
-    margin: 1rem 0;
-    border: none;
-    color: white;
-    background: #234465;
-    border-radius: 5px;
-    outline: none;
+h2 a {
+    font-weight: 700;
     text-transform: uppercase;
+    color: #FB667A;
+    text-decoration: none;
+}
+
+.blue {
+    color: #185875;
+}
+
+.yellow {
+    color: #FFF842;
+}
+
+.container th h1 {
     font-weight: bold;
-    letter-spacing: 0px;
-    cursor: pointer;
-    border-bottom: 1px solid white;
-    border-left: 1px solid white;
-}
-button:hover {
-    box-shadow: 1px 1px 14px 5px green;
+    font-size: 1em;
+    text-align: left;
+    color: #185875;
 }
 
-textarea {
-    width: 90%;
-    padding: 1%;
-    word-wrap: break-word;
-    resize: none;
-    text-align: center;
-    font-size: 18px;
-    border:none;
-    box-shadow: 0px 5px 11px 2px lightslategrey;
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container {
+    text-align: left;
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+    display: table;
+    padding: 0 0 8em 0;
+}
+
+.container td, .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+
+/* Background-color of the odd rows */
+.container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+
+/* Background-color of the even rows */
+.container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+
+.container th {
+    background-color: #1F2739;
+}
+
+.container td:first-child {
+    color: #FB667A;
+}
+
+.container tr:hover {
+    background-color: #464A52;
+    -webkit-box-shadow: 0 6px 6px -6px #0E1119;
+    -moz-box-shadow: 0 6px 6px -6px #0E1119;
+    box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+.container tr:hover {
+    background-color: #FFF842;
+    color: #403E10;
+    font-weight: bold;
+    box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+    
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+    transition-timing-function: line;
+}
+
+.select {
+    background-color: #FFF842 !important;
+    color: #403E10;
+    font-weight: bold;
+    box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+}
+
+.container thead tr:hover {
+    color: #ffffff;
+
+}
+
+@media (max-width: 800px) {
+    .container td:nth-child(4),
+    .container th:nth-child(4) {
+        display: none;
+    }
+}
+
+
+#searchField {
+    border: none;
+    padding: 8px;
     outline: none;
-    background-color: rgba(255,255,255,0.6);
-}
-textarea:focus {
-    box-shadow: 1px 1px 14px 5px green;
-
-}
-#output p {
-    border-bottom: 1px solid lightgrey;
-    padding: 1%;
-    word-wrap: break-word;
-    color : white;
+    border-radius: 3px;
 }
 
+#searchBtn {
+    background: transparent;
+    border: 2px solid darkgray;
+    padding: 7px 22px;
+    text-transform: uppercase;
+    color: darkgray;
+    font-weight: bold;
+    margin: 0 15px;
+    cursor: pointer;
+}
