--- a/JS Advanced/11.DOM Manipulations and Events/A03/style.css
+++ b/JS Advanced/11.DOM Manipulations and Events/A03/style.css
@@ -1,90 +1,85 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    color: #333;
+    background: #eeeeee;
+    font-family: "Source Code Pro", monospace;
 }
 
-table {
+body>h1 {
     text-align: left;
-    line-height: 40px;
-    border-collapse: separate;
-    border-spacing: 0;
-    border: 2px solid #ed1c40;
-    width: 500px;
-    margin: 50px auto;
-    border-radius: .25rem;
-}
-
-th {
-    border: none;
-}
-
-thead tr:first-child {
-    background: #ed1c40;
-    color: #fff;
-    border: none;
-}
-
-th,
-td {
-    padding: 0 15px 0 20px;
-}
-
-th {
-    font-weight: 500;
-}
-
-tbody tr:hover {
-    background-color: #f2f2f2;
-    cursor: default;
-}
-
-.button {
-    color: #aaa;
-    cursor: pointer;
-    vertical-align: middle;
-    margin-top: -4px;
-}
-
-.edit:hover {
-    color: #0a79df;
-}
-
-.delete:hover {
-    color: #dc2a2a;
-}
-
-label {
-    margin-left: 34%;
-    font-size: 20px;
-}
-
-input[type="text"] {
-    border-radius: 4px;
-    padding: 7px 5px;
-    border: 1px solid gray;
-    font-size: 18px;
-    outline: none;
-}
-
-button {
-    background: #ed1c40;
-    border: #ed1c40;
-    border-radius: 4px;
-    padding: 6px 10px;
-    font-size: 20px;
+    background: #50b9b9;
     color: white;
+    padding: 10px 20px;
+    border-radius: 10px 10px 0 0;
+    width: 250px;
+    margin: 0 auto;
+    font-size: 24px;
+    width: 492px;
+}
+
+ul {
+    margin-top: 5px;
+}
+
+li {
+    background-color: white;
+    padding: 7px;
+    border-radius: 13px;
+    margin-bottom: 5px;
+    list-style-type: none;
+    margin-left: -37px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#items li a {
+    color: red;
+    text-decoration: none;
+    padding-left: 5px;
+}
+
+#items li a:hover {
+    cursor: pointer;
+    color: rgb(49, 194, 44);
+}
+
+main {
+    background: #91a29f;
+    width: 500px;
+    margin: 0 auto;
+    padding: 1rem;
+    border-radius: 0 0 10px 10px;
+}
+
+main input[type="text"] {
+    border: 1px solid black;
+    border-radius: 14px;
+    padding: 5px;
+    font-size: 19px;
+    outline: none;
+    width: 240px;
+}
+
+main input[type="button"] {
+    border: 1px solid;
+    background: #eeeeee;
+    font-size: 14px;
+    border-radius: 14px;
     font-weight: bold;
     text-transform: uppercase;
-    cursor: pointer;
+    text-align: center;
+    letter-spacing: 0px;
     outline: none;
+    display: inline-block;
+    padding: 8px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), inset 0 2px 1px rgba(0, 0, 0, 0.2);
+    width: 50px;
 }
 
-#result {
-    text-align: center;
+main input[type="button"]:hover {
+    border-color: white;
+    background-color: #91a29f;
+    color: white;
+    cursor: pointer;
 }
